# rust-api-example

./: .env  Cargo.toml  README.md  diesel.toml  docker-compose.yml
.docker/api_server/: Dockerfile
migrations/2023-01-03-174343_users_table/: up.sql
src/: main.rs  routes.rs
src/routes/: users.rs  version.rs
src/shared/: models.rs  schema.rs
