[package]
name = "rust-api-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
dotenvy = "0.15.6"
diesel_migrations = "2.0.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.diesel]
version = "2.0.2"
features = ["postgres", "chrono"]
